# VO-SE-cut-studio

./: CMakeLists.txt  README.md  TYPE_Checker.txt  details.html  index.html  index.html 4.txt  main_window.py  prepare_hifigan_dataset.py  pyproject.toml  pyrightconfig.json  requirements.txt  studio.html  style.css  vocal.html
.github/workflows/: main.yml
include/: vose_core.h
modules/gui/: main_window.py  playback_engine.py  video_engine.py  vo_se_engine.py
modules/talk/: __init__.py  talk_manager.py
modules/tools/: pack_voice.py
modules/tools /: pack_voice.py
official_voices /: Voice.py
sdk/ffmpeg/include/libavutil/: ffversion.h
src/core/: vose_core.cpp
src/engine/: video_engine.cpp  video_engine.h  video_engine.hpp
